--- a/[frontend]/package.json
+++ b/[frontend]/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.16.13",
     "axios": "^0.23.0",
     "chart.js": "^3.5.1",
+    "history": "^5.1.0",
     "html-react-parser": "^1.4.0",
     "i18next": "^21.3.3",
     "i18next-browser-languagedetector": "^6.1.2",
