--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.3",
+    "socket.io": "^4.3.1",
+    "socket.io-client": "^4.3.2",
     "typescript": "^4.4.4",
     "web-vitals": "^1.0.1"
   },
